--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": "Toshimitsu Takahashi <toshi@tilfin.com>",
   "dependencies": {
-    "mongodb": "1.3.*",
+    "mongodb": "~2.0",
     "commander": "~2.1.0"
   },
   "devDependencies": {
