--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
   - "10.10"
 services:
   - mongodb
-script: 'make test-cov'
-after_success: 'make coveralls; make clean'
+script:
+  - npm run ci_test
+after_success:
+  - npm run coverage
